# iris

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  design.md  index.html  params.json
data/: hello_data
doc/: iris_block_diagram.graffle  iris_packet_flow.graffle  link_ipc.graffle
iris/: .gitignore  Cargo.toml  Makefile
iris/src/: iris  iris.rs  main.rs
iris/src/common/: hash.rs  identifier.rs  mod.rs  name.rs
iris/src/control/: mod.rs
iris/src/core/: core.rs  mod.rs
iris/src/core/datastructure/: cs.rs  fib.rs  identifier.rs  mod.rs  pit.rs
iris/src/core/link/: mod.rs  tcp_link.rs  udp_link.rs
iris/src/core/packet/: bef.rs  decoder.rs  message.rs  mod.rs  packet.rs  typespace.rs  validation.rs
iris/src/core/processor/: mod.rs
iris/src/fib/: fib.rs
iris/src/fwd/: cs.rs  face.rs  fib.rs  fwd.rs  mod.rs  pit.rs
iris/src/packet/: decoder.rs  message.rs  mod.rs  packet.rs
irisctl/: Cargo.toml  Makefile
irisctl/src/: main.rs
small/: test.rs
src/packet/: packet.go
test/: .gitignore  udp_client.rs  udp_packet_generator.rs  udp_server.rs
